# Mekala-Learning-solution

./: .env.example  .gitignore  FINAL_DELIVERY.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  FEATURES.md
docs/db/: init.sql
frontend/: nginx.conf  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Header.tsx  Sidebar.tsx
frontend/src/pages/: Courses.tsx  Dashboard.tsx  Lessons.tsx  Login.tsx  Payments.tsx  Practice.tsx  Profile.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/store/: authSlice.ts  courseSlice.ts  index.ts
frontend/src/styles/: index.css
scripts/: backup.sh  health-check.sh  restore.sh
services/ai-service/: Cargo.toml  Dockerfile
services/ai-service/src/: main.rs
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: auth.rs  main.rs  middleware.rs  proxy.rs
services/communication-service/: Cargo.toml  Dockerfile
services/communication-service/src/: main.rs
services/course-service/: Cargo.toml  Dockerfile
services/course-service/src/: main.rs
services/payment-service/: Cargo.toml  Dockerfile
services/payment-service/src/: main.rs
services/user-service/: Cargo.toml  Dockerfile
services/user-service/migrations/: 20250101000001_create_users.sql
services/user-service/src/: db.rs  handlers.rs  main.rs  models.rs
